@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.09-11.02
-Date: 2010-10-25
+Version: 0.09-11.03
+Date: 2010-11-10
 Title: Missing Data Imputation and Model Checking
 Author: Andrew Gelman <gelman@stat.columbia.edu>, Jennifer Hill
         <jh1030@columbia.edu>, Yu-Sung Su <ys463@columbia.edu>, Masanao
@@ -11,6 +11,6 @@ Depends: methods, MASS, nnet, car, arm, Matrix, lme4, R2WinBUGS, abind
 Description: Missing-data imputation and model checking
 URL: http://www.stat.columbia.edu/~gelman/
 License: GPL (>= 2)
-Packaged: 2010-10-25 08:56:00 UTC; yusung
+Packaged: 2010-11-10 14:10:05 UTC; yusung
 Repository: CRAN
-Date/Publication: 2010-10-25 10:40:36
+Date/Publication: 2010-11-11 12:40:43
